cue/testdata/basicrewrite/000_errors.txtar
# DO NOT EDIT; generated by go run testdata/gen.go
#
#name: errors
#evalPartial
-- in.cue --
a: _|_ & _|_
b: null & _|_
c: b.a == _|_
d: _|_ != b.a
e: _|_ == _|_
-- out/def --
a: _|_ // user-defined error
b: _|_ // user-defined error
c: true
d: false
e: true
-- out/legacy-debug --
<0>{a: _|_(user-defined error), b: _|_(user-defined error), c: true, d: false, e: true}
-- out/compile --
--- in.cue
{
  a: (_|_(user-defined error) & _|_(user-defined error))
  b: (null & _|_(user-defined error))
  c: (〈0;b〉.a == _|_(user-defined error))
  d: (_|_(user-defined error) != 〈0;b〉.a)
  e: (_|_(user-defined error) == _|_(user-defined error))
}
-- out/eval --
Errors:
user-defined error:
    ./in.cue:1:4
user-defined error:
    ./in.cue:2:11

Result:
(_|_){
  // [user]
  a: (_|_){
    // [user] user-defined error:
    //     ./in.cue:1:4
  }
  b: (_|_){
    // [user] user-defined error:
    //     ./in.cue:2:11
  }
  c: (bool){ true }
  d: (bool){ false }
  e: (bool){ true }
}
